# travle-demo

./: DOCKERFILE  docker-compose.yml  git.md  go.mod  go.sum  main.go
configs/: config.yaml
internal/business/ar/: ar.go  ar_api.go  service.go
internal/business/ar/api/: ar_api.go
internal/business/ar/model/: ar.go
internal/business/ar/service/: ar.go
internal/business/discover/: discover.go  discover_api.go  service.go
internal/business/discover/api/: discover_api.go
internal/business/discover/app/: discover_app.go
internal/business/discover/model/: discover.go
internal/business/discover/repo/: discover.go
internal/business/discover/service/: discover.go
internal/business/discover/sql/: discover.sql
internal/business/footprint/: footprint.go  footprint_api.go  service.go
internal/business/footprint/api/: footprint_api.go
internal/business/preference/: preference.go  preference_api.go  service.go
internal/business/recognize/: recognize.go  recognize_api.go  service.go
internal/business/user/: refresh_token.go  service.go  user.go  user_api.go
internal/business/user/api/: refresh_token.go  (+1 more)
internal/pkg/jwt/: jwt.go
internal/pkg/middlewares/: auth.go
internal/pkg/request/: request.go
internal/pkg/response/: code.go  response.go
internal/pkg/route/: route.go
internal/pkg/validator/: validator.go
pkg/config/: config.go
scripts/: seed_attraction_images.sql
services/recognizer/: Dockerfile  pyproject.toml
services/recognizer/app/: db.py  index_manager.py  main.py  predict.py
services/recognizer/scripts/: download_models.sh
(+27 files in other folders)
