[project]
name = "recognizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "paddlepaddle>=3.0.0",
    "faiss-cpu>=1.9.0",
    "psycopg[binary]>=3.2.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
